# learnopengl

./: CMakeLists.txt
2.3.1_hello_window/: CMakeLists.txt  main.cpp
2.4.1_hello_triangle/: CMakeLists.txt  main.cpp
2.4.2_hello_triangle/: CMakeLists.txt  glad.c  main.cpp
2.6.1_texture/: CMakeLists.txt  main.cpp
2.6.2_texture/: CMakeLists.txt  main.cpp
2.6.3_texture/: CMakeLists.txt  main.cpp
2.8.1_transform/: 8.1_transform.fs  CMakeLists.txt  main.cpp
2.8.2_transform/: CMakeLists.txt  main.cpp
2.8.3_transform/: CMakeLists.txt  main.cpp
2.9.1_camera/: CMakeLists.txt  main.cpp
8.1_transform/: 8.1_transform.vs  CMakeLists.txt
common_libs/: CMakeLists.txt
common_libs/include/: glsl.hpp
common_libs/include/glad/: glad.h
common_libs/src/: glsl.cpp
glsl/: CMakeLists.txt  glsl.hpp
hello_triangle/: CMakeLists.txt  main.cpp
hello_triangle_2/: CMakeLists.txt  hello_triangle2.fs  hello_triangle2.vs  main.cpp
hello_window/: CMakeLists.txt  main.cpp
resources/shaders/: 2.8.2_transform.fs  2.9.1_camera.vs
texture/: CMakeLists.txt  main.cpp  texture.fs  texture.vs
texture2/: main.cpp  texture2.fs
texture3/: texture3.vs
